Hide content form labels when on mobile (fixj #19)

--- a/sds/css/form.css
+++ b/sds/css/form.css
@@ -167,7 +167,16 @@ button.disabled, button:disabled {
 	padding: .4rem 1.1rem;
 }
 
+/*---------- MEDIA QUERY FOR CONTENT FORM ----------*/
+@media screen and (max-width: 500px){
+	.content-form .form-element label {
+		display: none;
+	}
 
+	.content-form .form-element input {
+		width: 100%;
+	}
+}
 
 
 /*---------- UPLOAD BUTTON ----------*/
